# codingclub

./: .gitignore  README.md  config.py  index.html  package-lock.json  package.json  pyproject.toml  register.db  register.html  run.py
app/: __init__.py  email.py  index.py  models.py  register.py
app/static/: README.md  register.html
app/static/assets/css/: style.css  style.css.map
app/static/assets/css/sections/: register.css  register.css.map
app/static/scss/: _custom.scss  style.scss
app/static/scss/components/: _button.scss  _mixings.scss  _typography.scss
app/static/scss/sections/: _footer.scss  _intro-section.scss  _navbar.scss  _timeline.scss  register.scss
app/static/styles/: style.css  style.css.map
app/static/uploads/: .gitkeep
app/templates/: email.html  index.html  register.html  upload_proposal.html
assets/css/: style.css  style.css.map
assets/css/sections/: register.css
scss/: _custom.scss  style.scss
scss/components/: _button.scss  _mixings.scss  _typography.scss
scss/sections/: _footer.scss  _intro-section.scss  _navbar.scss  _overview.scss  _rules.scss  _timeline.scss
styles/: style.css  style.css.map
