[tool.poetry]
name = "ideation"
version = "0.1.0"
description = "A website for Ideation"
authors = ["Harshaa <harshaaloga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
