[tool.poetry]
name = "ideation"
version = "0.1.0"
description = "A website for Ideation"
authors = ["Harshaa <harshaaloga@gmail.com>", "Jaswant <jaswantgunaseelan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
